# CLPR

./: CMakeLists.txt  main.cpp
gui/: AppWindow.cpp  AppWindow.h  gui.h  gui.ui
util/: core.h
